# llm-bucket

./: .env.example  .gitignore  Cargo.toml  README.md  attention.yaml  config.yaml.example  notes.md  prompt.md
llm-bucket/: Cargo.toml
llm-bucket-core/: Cargo.toml
llm-bucket-core/src/: code_to_pdf.rs  config.rs  contract.rs  download.rs  lib.rs  preprocess.rs  synchronise.rs  uploader.rs
llm-bucket-core/tests/: download_confluence.rs  download_git.rs  processor_flattenfiles.rs  processor_readmetopdf.rs  synchronise_integration.rs  test_code_to_pdf.rs
llm-bucket/src/: cli.rs  lib.rs  load_config.rs  main.rs  preprocess.rs  synchronise.rs  upload.rs
llm-bucket/tests/: cli.rs  processor_flattenfiles.rs  processor_readmetopdf.rs  synchronise_integration.rs  test_load_config.rs  upload_integration.rs
src/: cli.rs  code_to_pdf.rs  config.rs  contract.rs  download.rs  lib.rs  load_config.rs  main.rs  preprocess.rs  synchronise.rs  upload.rs
src/download/: mod.rs
src/upload/: mod.rs
tests/: cli.rs  download_confluence.rs  download_git.rs  integration_test.rs  processor_flattenfiles.rs  processor_readmetopdf.rs  synchronise_integration.rs  test_code_to_pdf.rs  test_git_clone.rs  test_load_config.rs  upload_integration.rs
