[workspace]
members = ["./openapi-client/generated", "."]

[package]
name = "llm-bucket"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0"
openapi = { path = "./openapi-client/generated" }
sha2 = "0.10"
printpdf = "0.8.2"
tempfile = "3"

tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v4"] }
futures = "0.3.31"

[dev-dependencies]
dotenv = "0.15"
