[package]
name = "llm-bucket"
version = "0.1.0"
edition = "2021"
description = "Open source core logic and pipelines for synchronising a bucket with content for LLMs to consume with RAG."
license = "MIT"
authors = ["Kas Buunk <kasbuunk@icloud.com>"]
repository = "https://github.com/kasbuunk/llm-bucket"
readme = "README.md"

[lib]
name = "llm_bucket"
path = "src/lib.rs"

[dependencies]
printpdf = "0.8.2"
futures = "0.3.31"
tempfile = "3"
tracing = "0.1"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"
uuid = { version = "1.17.0", features = ["v4"] }
mockall = "0.12"

[features]
default = ["test-export-mocks"]
test-export-mocks = []

[dev-dependencies]
tempfile = "3"
dotenvy = "0.15"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serial_test = "2"
