[package]
name = "llm-bucket-core"
version = "0.1.0"
edition = "2021"
description = "Open source core logic and pipelines for llm-bucket. All business logic, no proprietary dependencies."
license = "MIT"
authors = ["Kas Buunk <kasbuunk@gmail.com>"]
repository = "https://github.com/kasbuunk/llm-bucket"

[lib]
name = "llm_bucket_core"
path = "src/lib.rs"

[dependencies]
printpdf = "0.8.2"
tempfile = "3"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
dotenvy = "0.15"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
